--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "db:setup": "npx tsx lib/db/setup.ts",
+    "db:setup": "echo 'Run the SQL schema in your Supabase dashboard'",
     "db:seed": "npx tsx lib/db/seed.ts",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:studio": "drizzle-kit studio"
+    "db:generate": "echo 'No migration generation needed for Supabase'",
+    "db:migrate": "echo 'Run migrations directly in Supabase dashboard'",
+    "db:studio": "echo 'Use Supabase dashboard instead'"
   },
   "dependencies": {
+    "@radix-ui/react-progress": "^1.1.7",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/supabase-js": "^2.39.0",
     "@tailwindcss/postcss": "4.1.7",
     "@types/node": "^22.15.18",
     "@types/react": "19.1.4",
@@ -20,16 +23,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.5.0",
-    "drizzle-kit": "^0.31.1",
-    "drizzle-orm": "^0.43.1",
     "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
     "next": "15.4.0-canary.47",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
-    "postgres": "^3.4.5",
     "radix-ui": "^1.4.2",
     "react": "19.1.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "19.1.0",
+    "recharts": "^2.15.4",
     "server-only": "^0.0.1",
     "stripe": "^18.1.0",
     "swr": "^2.3.3",
@@ -38,5 +41,8 @@
     "tw-animate-css": "^1.3.0",
     "typescript": "^5.8.3",
     "zod": "^3.24.4"
+  },
+  "devDependencies": {
+    "tailwindcss-animate": "^1.0.7"
   }
 }
